# georaffer

./: .envrc  .gitignore  LICENSE  README.md  THURINGIA_OPTIMIZATION.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.serena/: project.yml
examples/: rlp_wms_vs_jp2_2022.ipynb
georaffer/: __init__.py  __main__.py  align.py  cli.py  config.py  conversion.py  downloading.py  grids.py  metadata.py  pipeline.py  preview.py  provenance.py  reporting.py  runtime.py  store.py  tiles.py  workers.py
georaffer/converters/: __init__.py  dom_xyz.py  dsm.py  jp2.py  laz.py  laz_irregular.py  utils.py
georaffer/downloaders/: __init__.py  base.py  bb.py  bw.py  by.py  cz.py  feeds.py  nrw.py  rlp.py  th.py  wms.py
georaffer/inputs/: __init__.py  bbox.py  csv.py  cvl.py  geotiff.py  pygeon.py
scripts/: bench_convert_laz.py  bench_laz_process.py  catalog_report.py  mosaic_tiles.py  parallel_decode.py  profile_laz_single.py  pygeon_download_tile_report.py  regenerate_provenance.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_canary_provenance.py  test_convert_end_to_end.py  test_downloader.py  test_runtime_benchmark.py
tests/unit/: conftest.py  test_align.py  test_bb_metadata.py  test_cli.py  test_conversion_skip.py  test_grids.py  test_metadata.py  test_mosaic.py  test_pipeline.py  test_preview.py  test_provenance.py  test_store.py
tests/unit/converters/: test_dom_xyz.py  test_jp2.py  test_laz.py  test_laz_irregular.py  test_utils.py
tests/unit/downloaders/: test_base.py  test_bb.py  test_bw.py  test_by.py  test_cz.py  test_nrw.py  test_rlp.py  test_wms.py
tests/unit/inputs/: test_bbox.py  test_csv.py
